crates/franken-node/src/supply_chain/snapshots/frankenengine_node__supply_chain__trust_card__tests__trust_card_canonical_json_stability.snap
---
source: crates/franken-node/src/supply_chain/trust_card.rs
expression: scrubbed
---
{"active_quarantine":false,"audit_history":[{"detail":"Initial trust card generation","event_code":"TRUST_CARD_CREATED","timestamp":"[TIMESTAMP]","trace_id":"trace-12345"},{"detail":"Provenance verification completed","event_code":"TRUST_CARD_QUERIED","timestamp":"[TIMESTAMP]","trace_id":"trace-67890"}],"behavioral_profile":{"filesystem_access":false,"network_access":true,"profile_summary":"Network scanner with read-only file access","subprocess_access":false},"capability_declarations":[{"description":"Scan network endpoints for vulnerabilities","name":"network.scan","risk":"medium"},{"description":"Read configuration files","name":"fs.read_config","risk":"low"}],"card_hash":"1fe51cffac2ff8c3df498f558fcc6b146015fb45c0c59ca8715b6d70f9c9af9b","certification_level":"gold","dependency_trust_summary":[{"dependency_id":"npm:lodash","trust_level":"high"},{"dependency_id":"npm:axios","trust_level":"medium"}],"derivation_evidence":{"derivation_chain_hash":"sha256:[HASH]","derived_at_epoch":[EPOCH],"evidence_refs":[{"evidence_id":"slsa-provenance-v1.0","evidence_type":"provenance_chain","verification_receipt_hash":"a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3a3","verified_at_epoch":[EPOCH]},{"evidence_id":"security-audit-2026-Q1","evidence_type":"audit_report","verification_receipt_hash":"b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4b4","verified_at_epoch":[EPOCH]}]},"extension":{"extension_id":"npm:@acme/security-scanner","version":"2.1.0"},"last_verified_timestamp":"[TIMESTAMP]","previous_version_hash":null,"provenance_summary":{"artifact_hashes":["sha256:[HASH]","sha256:[HASH]"],"attestation_level":"L3-verified-build","source_uri":"https://github.com/acme-corp/security-scanner","verified_at":"[TIMESTAMP]"},"publisher":{"display_name":"ACME Corporation","publisher_id":"acme-corp"},"registry_signature":"c759b940acdb1e75456a78c10ba8f040b51b76b6ba398981557a29e04a6a8704","reputation_score_basis_points":8750,"reputation_trend":"improving","revocation_status":{"status":"active"},"schema_version":"trust-card-v1.0","trust_card_version":42,"user_facing_risk_assessment":{"level":"low","summary":"Well-maintained security tool with verified provenance"}}
