crates/franken-node/src/supply_chain/snapshots/frankenengine_node__supply_chain__trust_card__tests__trust_card_comparison_human.snap
---
source: crates/franken-node/src/supply_chain/trust_card.rs
expression: rendered
---
compare npm:@acme/security-scanner vs npm:@acme/security-scanner:
- certification_level: gold -> platinum
- reputation_score_basis_points: 8750 -> 9500
- reputation_trend: improving -> stable
