crates/franken-node/src/supply_chain/snapshots/frankenengine_node__supply_chain__trust_card__tests__trust_card_human_complex_scenario.snap
---
source: crates/franken-node/src/supply_chain/trust_card.rs
expression: scrubbed
---
extension: npm:@acme/security-scanner@2.1.0
publisher: ACME Corporation
certification: Gold
reputation: 8750bp (Improving)
revocation: active
quarantine: false
capabilities: network.scan, fs.read_config, crypto.encrypt, system.process_spawn
risk: High - High-capability security tool requiring careful review
