crates/franken-node/src/supply_chain/snapshots/frankenengine_node__supply_chain__trust_card__tests__trust_card_human_empty_collections.snap
---
source: crates/franken-node/src/supply_chain/trust_card.rs
expression: scrubbed
---
extension: npm:@acme/security-scanner@2.1.0
publisher: ACME Corporation
certification: Gold
reputation: 8750bp (Improving)
revocation: active
quarantine: false
capabilities: 
risk: Low - Well-maintained security tool with verified provenance
