crates/franken-node/src/supply_chain/snapshots/frankenengine_node__supply_chain__trust_card__tests__trust_card_human_render_revoked.snap
---
source: crates/franken-node/src/supply_chain/trust_card.rs
expression: scrubbed
---
extension: npm:@acme/security-scanner@2.1.0
publisher: ACME Corporation
certification: Gold
reputation: 8750bp (Improving)
revocation: revoked (Security vulnerability discovered in dependency)
quarantine: true
capabilities: network.scan, fs.read_config
risk: Critical - REVOKED: Security vulnerability in transitive dependency
